[gd_scene load_steps=6 format=3 uid="uid://bhuj1mwo8w2eh"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_hoh8j"]
[ext_resource type="Texture2D" uid="uid://m6ovkecaw3aq" path="res://Assets/HomeIco.png" id="2_23oyd"]
[ext_resource type="LabelSettings" uid="uid://bt8ybbniuvfld" path="res://Other/Font.tres" id="2_sv26h"]
[ext_resource type="Texture2D" uid="uid://5ndpy54bgfyl" path="res://Assets/FIlesIco.png" id="3_xgoal"]
[ext_resource type="Texture2D" uid="uid://b7syy5ksit032" path="res://Assets/FileIco2.png" id="4_va1w0"]

[node name="Files" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_hoh8j")
metadata/_edit_use_anchors_ = true

[node name="FileDialogmod" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(546, 390)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="DeleteModPopup" type="ConfirmationDialog" parent="."]
position = Vector2i(330, 331)
size = Vector2i(363, 106)
dialog_text = "Are You Sure You Want To Remove The Mod?
It Will Be Moved To Trash"

[node name="Window" type="Window" parent="."]
title = "Mods Loading. Please Wait"
position = Vector2i(350, 350)
size = Vector2i(350, 100)
visible = false
unresizable = true
always_on_top = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1025.0
offset_bottom = 769.0
color = Color(0.254343, 0.254343, 0.254343, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 88.0
offset_bottom = 768.0
color = Color(0.136751, 0.136751, 0.136751, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 116.0
offset_top = 77.0
offset_right = 501.0
offset_bottom = 660.0
color = Color(0.136751, 0.136751, 0.136751, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 568.0
offset_top = 77.0
offset_right = 953.0
offset_bottom = 660.0
color = Color(0.136751, 0.136751, 0.136751, 1)

[node name="Preview" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 77.0
offset_right = 953.0
offset_bottom = 660.0

[node name="Control" type="Control" parent="Preview"]
layout_mode = 2
mouse_filter = 1

[node name="Label2" type="Label" parent="Preview/Control"]
layout_mode = 2
offset_right = 94.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "PREVIEW:"
label_settings = ExtResource("2_sv26h")

[node name="Label3" type="Label" parent="Preview/Control"]
layout_mode = 2
offset_left = 2.0
offset_top = 257.0
offset_right = 96.0
offset_bottom = 276.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Description:"
label_settings = ExtResource("2_sv26h")

[node name="TextureRect" type="TextureRect" parent="Preview/Control"]
layout_mode = 0
offset_top = 27.0
offset_right = 385.0
offset_bottom = 243.0
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Preview/Control"]
layout_mode = 0
offset_top = 276.0
offset_right = 385.0
offset_bottom = 584.0
fit_content = true

[node name="ModsListControl" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 116.0
offset_top = 77.0
offset_right = 116.0
offset_bottom = 77.0
mouse_filter = 1

[node name="Label2" type="Label" parent="ModsListControl"]
layout_mode = 2
offset_right = 94.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "            Name                            |               Category             "
label_settings = ExtResource("2_sv26h")

[node name="Mods" type="ScrollContainer" parent="ModsListControl"]
layout_mode = 0
offset_top = 20.0
offset_right = 385.0
offset_bottom = 583.0
follow_focus = true

[node name="ModsList" type="VBoxContainer" parent="ModsListControl/Mods"]
layout_mode = 2
mouse_filter = 2

[node name="Home" type="Button" parent="."]
layout_mode = 2
offset_right = 74.0
offset_bottom = 74.0
icon = ExtResource("2_23oyd")
expand_icon = true

[node name="Files" type="Button" parent="."]
layout_mode = 2
offset_top = 92.0
offset_right = 74.0
offset_bottom = 166.0
icon = ExtResource("3_xgoal")
expand_icon = true

[node name="Mod Files Explorer" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 6.0
offset_right = 172.0
offset_bottom = 80.0
scale = Vector2(0.68, 0.68)
icon = ExtResource("4_va1w0")
expand_icon = true

[node name="Import" type="Button" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 11.0
offset_right = 215.0
offset_bottom = 51.0
text = "Import"
expand_icon = true

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 917.0
offset_top = 708.0
offset_right = 1013.0
offset_bottom = 748.0
text = "Start Game"
expand_icon = true

[node name="Load Mods" type="Button" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 708.0
offset_right = 897.0
offset_bottom = 748.0
text = "Load Mods"
expand_icon = true

[node name="Remove Mod" type="Button" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 695.0
offset_right = 225.0
offset_bottom = 735.0
text = "Remove Mod"
expand_icon = true

[node name="Mod Dir" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 11.0
offset_right = 925.0
offset_bottom = 47.0
placeholder_text = "Mod Directory, click import to add to list (Drag And Drop Allowed)"

[connection signal="file_selected" from="FileDialogmod" to="." method="_on_file_dialogmod_file_selected"]
[connection signal="confirmed" from="DeleteModPopup" to="." method="_on_delete_mod_popup_confirmed"]
[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Files" to="." method="_on_files_pressed"]
[connection signal="pressed" from="Mod Files Explorer" to="." method="_on_mod_files_explorer_pressed"]
[connection signal="pressed" from="Import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Load Mods" to="." method="_on_load_mods_pressed"]
[connection signal="pressed" from="Remove Mod" to="." method="_on_remove_mod_pressed"]
